[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dgpdb = { git = "https://github.com/donpdonp/dgpdb" }
#dgpdb = { path = "../../dgpdb" }
mile39 = { git = "https://github.com/donpdonp/mile39"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.0.3"
redis = "0.21"
liquid = "0.26.0"
once_cell = "1.12"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
protobuf = "3.0"
protobuf-codegen = "3.0"
